[tool.poetry]
name = "xunit_tdd"
version = "0.1.0"
description = "Building an xUnit style test framework using TDD."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
